--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>My Personal Website</title>
 </head>
 <body>
+    <div class="menu-area">
+        <a href="#" class="logo">Company name</a>
+        <ul class="nav">
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Portfolio">Portfolio</a></li>
+            <li><a href="#Services">Services</a></li>
+            <li><a href="#Contact">Contact</a></li>
+
+        </ul>
+        </div>
     
 </body>
 </html>
