Created the services  section for the website

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
             <li><a href="#Portfolio">Portfolio</a></li>
             <li><a href="#Services">Services</a></li>
             <li><a href="#Contact">Contact</a></li>
-
         </ul>
-        </div>
+    </div>
+        <section id="Portfolio">
+            <div class="content">
+                <h1>Portfolio Section</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tempora labore tenetur necessitatibus deleniti impedit inventore fugiat maiores ducimus. Fugit enim quam qui consectetur dignissimos sapiente optio, nesciunt provident impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+            </div>
+        </section>
+        
     
 </body>
 </html>
