Created portfolio section for the website

--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
             <li><a href="#Contact">Contact</a></li>
         </ul>
     </div>
+        <section id="Home">
+            <div class="content">
+                <h1>Creative Design</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore sequi quis officia ex a alias quisquam eos nostrum sit at voluptas ut dolores itaque, velit soluta minus? Dignissimos, voluptatibus animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eaque recusandae nam dolorem tempore! Sunt beatae, quidem commodi id, similique nesciunt quas et, provident ratione accusantium nulla expedita nemo quia.</p>
+            </div>
+        </section>
         <section id="Portfolio">
             <div class="content">
                 <h1>Portfolio Section</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tempora labore tenetur necessitatibus deleniti impedit inventore fugiat maiores ducimus. Fugit enim quam qui consectetur dignissimos sapiente optio, nesciunt provident impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+            </div>
+        </section>
+        <section id="Services">
+            <div class="content">
+                <h1>Services Section</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error amet sit qui excepturi dignissimos maiores, minima accusantium, odit repellendus architecto hic voluptate nulla incidunt assumenda debitis saepe aliquam est quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
             </div>
         </section>
         
