Created about section for the website

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tempora labore tenetur necessitatibus deleniti impedit inventore fugiat maiores ducimus. Fugit enim quam qui consectetur dignissimos sapiente optio, nesciunt provident impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
             </div>
         </section>
+        <section id="About">
+            <div class="content">
+                <h1>About Section</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nemo ratione magnam officia? Possimus, reprehenderit itaque? Id porro voluptates, animi placeat sint quidem quis dolores fugiat incidunt soluta error dolore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+            </div>
+        </section>
         <section id="Services">
             <div class="content">
                 <h1>Services Section</h1>
