Created contact section for the website

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error amet sit qui excepturi dignissimos maiores, minima accusantium, odit repellendus architecto hic voluptate nulla incidunt assumenda debitis saepe aliquam est quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
             </div>
         </section>
+        <section id="Contact">
+            <div class="content">
+                <h1>Contact Section</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, magni dignissimos? Veritatis eaque, atque laborum adipisci nemo odit iste doloremque libero? Dolorem numquam sit, debitis ipsam quis magni doloribus ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+            </div>
+        </section>
         
     
 </body>
