Added text instead of placeholder text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="menu-area">
-        <a href="#" class="logo">Company name</a>
+        <a href="#" class="logo">SiteSmiths</a>
         <ul class="nav">
             <li><a href="#Home">Home</a></li>
             <li><a href="#About">About</a></li>
@@ -27,7 +27,7 @@
         <section id="Home">
             <div class="content">
                 <h1>Creative Design</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore sequi quis officia ex a alias quisquam eos nostrum sit at voluptas ut dolores itaque, velit soluta minus? Dignissimos, voluptatibus animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eaque recusandae nam dolorem tempore! Sunt beatae, quidem commodi id, similique nesciunt quas et, provident ratione accusantium nulla expedita nemo quia.</p>
+                <p>SiteSmiths is a cutting-edge web development company, crafting bespoke websites that captivate audiences and deliver tangible results. Our team of tech-savvy creatives pushes boundaries to ensure your online presence stands out. Experience the art of innovation with SiteSmiths and unlock your digital potential. Let's build something extraordinary together.</p>
             </div>
         </section>
         <section id="Portfolio">
