Added about section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
     </div>
         <section id="Home">
             <div class="content">
-                <h1>Creative Design</h1>
+                <h1>SiteSmiths</h1>
                 <p>SiteSmiths is a cutting-edge web development company, crafting bespoke websites that captivate audiences and deliver tangible results. Our team of tech-savvy creatives pushes boundaries to ensure your online presence stands out. Experience the art of innovation with SiteSmiths and unlock your digital potential. Let's build something extraordinary together.</p>
+            </div>
+        </section>
+        <section id="About">
+            <div class="content">
+                <h1>About Section</h1>
+                <p>SiteSmiths specializes in creating a wide range of websites tailored to meet diverse needs. From sleek and responsive business websites that leave a lasting impression, to e-commerce platforms that facilitate seamless online transactions. We also develop engaging portfolio sites, informative blogs, and interactive web applications. Whatever your vision, our team is equipped to turn it into a stunning reality with precision and creativity.</p>
             </div>
         </section>
         <section id="Portfolio">
@@ -36,12 +42,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tempora labore tenetur necessitatibus deleniti impedit inventore fugiat maiores ducimus. Fugit enim quam qui consectetur dignissimos sapiente optio, nesciunt provident impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
             </div>
         </section>
-        <section id="About">
-            <div class="content">
-                <h1>About Section</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nemo ratione magnam officia? Possimus, reprehenderit itaque? Id porro voluptates, animi placeat sint quidem quis dolores fugiat incidunt soluta error dolore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
-            </div>
-        </section>
+        
         <section id="Services">
             <div class="content">
                 <h1>Services Section</h1>
