Wrote about the services provided

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <section id="Portfolio">
             <div class="content">
                 <h1>Portfolio Section</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tempora labore tenetur necessitatibus deleniti impedit inventore fugiat maiores ducimus. Fugit enim quam qui consectetur dignissimos sapiente optio, nesciunt provident impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+                <p>At SiteSmiths, our portfolio reflects a diverse showcase of web design mastery. With an artistic blend of aesthetics and functionality, we curate visually stunning portfolios that capture each client's unique essence. From showcasing creative endeavors to professional achievements, our portfolio websites are crafted to leave a lasting impression on visitors. Trust SiteSmiths to present your work in a compelling and captivating way that sets you apart from the rest.</p>
             </div>
         </section>
         
         <section id="Services">
             <div class="content">
                 <h1>Services Section</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error amet sit qui excepturi dignissimos maiores, minima accusantium, odit repellendus architecto hic voluptate nulla incidunt assumenda debitis saepe aliquam est quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+                <p>SiteSmiths offers a comprehensive suite of web services tailored to elevate your online presence. Our expertise encompasses custom web design and development, e-commerce solutions, responsive mobile optimization, and intuitive user experience. We provide content management systems for easy website management, SEO strategies to boost visibility, and robust security measures for a safe digital environment. Partner with us to unleash the full potential of your digital journey.</p>
             </div>
         </section>
         <section id="Contact">
