Wrote the contact section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="Contact">
             <div class="content">
                 <h1>Contact Section</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, magni dignissimos? Veritatis eaque, atque laborum adipisci nemo odit iste doloremque libero? Dolorem numquam sit, debitis ipsam quis magni doloribus ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eligendi iusto, maiores in est dolorum dolores consequatur nobis numquam placeat eveniet enim cumque tenetur rerum hic quisquam sit et ratione.</p>
+                <p>For all your web development needs, reach out to SiteSmiths. You can contact us via email at info@sitesmiths.com.au or give us a call on our phone number [+61-555-123456]. We are here to create impressive websites and provide top-notch services. Let's turn your ideas into captivating digital realities!</p>
             </div>
         </section>
         
