--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Montserrat&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <div class="menu-area">
-        <a href="#" class="logo">SiteSmiths</a>
+        <a href="#" class="logo" id="logo">SiteSmiths</a>
         <ul class="nav">
             <li><a href="#Home">Home</a></li>
             <li><a href="#About">About</a></li>
